Done: baseUrl Seperation,build and .xml settings