@@ -15,65 +15,69 @@ public class VideoFileService {
 	 @Value("${upload.video.directory}")
 	    private String videoUploadDirectory;
 	    
-	    public String saveVideoFile(MultipartFile videoFile) throws IOException {
-	        // Generate a unique file name (you can use other strategies)
+
+	 public String saveVideoFile(MultipartFile videoFile) throws IOException {
+	        // Ensure the upload directory exists
+	        Path uploadPath = Paths.get(videoUploadDirectory);
+	        if (!Files.exists(uploadPath)) {
+	            Files.createDirectories(uploadPath);
+	        }
+
+	        // Generate a unique file name
 	        String uniqueFileName = System.currentTimeMillis() + "_" + videoFile.getOriginalFilename();
 
-	        // Define the file path where the audio file will be stored
-	        String filePath = Paths.get(videoUploadDirectory).resolve(uniqueFileName).toString();
+	        // Define the file path where the video file will be stored
+	        String filePath = uploadPath.resolve(uniqueFileName).toString();
 	        String modifiedPath = filePath.replace("video\\", "");
-	      
-
-
 	        // Save the file to the server
-	        Files.copy(videoFile.getInputStream(), Path.of(filePath), StandardCopyOption.REPLACE_EXISTING);
+	        Files.copy(videoFile.getInputStream(), Paths.get(filePath), StandardCopyOption.REPLACE_EXISTING);
 
-	        return modifiedPath;   
-	        
+	        // Return the relative path to the file
+	        return modifiedPath;
 	    }
-	    
-	    public boolean deleteVideoFile(String fileName) {
-	    	Path filePath = Paths.get(videoUploadDirectory,fileName);
-	    	
-	    
-	        try {
-	            boolean deleted = Files.deleteIfExists(filePath);
+public boolean deleteVideoFile(String fileName) {
+    Path filePath = Paths.get(videoUploadDirectory, fileName);
 
-	            if (deleted) {
-	                System.out.println("File deleted successfully");
-	            } else {
-	                System.out.println("File does not exist or deletion failed");
-	            }
+    try {
+        boolean deleted = Files.deleteIfExists(filePath);
 
-	            return deleted; // Return the result to the caller
-	        } catch (IOException e) {
-	            e.printStackTrace();
-	            System.out.println("Error occurred while deleting the file");
-	            return false; // Return false in case of an exception
-	        }
-	    }
+        if (deleted) {
+            System.out.println("File deleted successfully");
+        } else {
+            System.out.println("File does not exist or deletion failed");
+        }
 
-	    public String updateVideoFile(String existingFileName, MultipartFile newVideoFile) throws IOException {
-	    	String uniqueFileName = System.currentTimeMillis() + "_" + newVideoFile.getOriginalFilename();
-	        // Define the file path for the existing audio file
-	        String existingFilePath = videoUploadDirectory+existingFileName;
-	        System.out.println(existingFilePath);
-	        String filePath = Paths.get(videoUploadDirectory).resolve(uniqueFileName).toString();
-	        String modifiedPath = filePath.replace("video\\", "");
-	        System.out.println("update"+modifiedPath);
-	        
-	        // Check if the existing file is present
-	        if (Files.exists(Path.of(existingFilePath))) {
-	            // Save the updated file to the same location with the existing file name
-	            Files.copy(newVideoFile.getInputStream(), Path.of(filePath), StandardCopyOption.REPLACE_EXISTING);
-	         // Delete the existing file
-	          Files.deleteIfExists(Path.of(existingFilePath));
-	            return modifiedPath;
-	        } else {
-	            // Handle the case where the existing file is not present
-	            throw new FileNotFoundException("Existing file not found: " + existingFileName);    
-	        }
-	        
-	    }
+        return deleted; // Return the result to the caller
+    } catch (IOException e) {
+        e.printStackTrace();
+        System.out.println("Error occurred while deleting the file");
+        return false; // Return false in case of an exception
+    }
+}
+
+public String updateVideoFile(String existingFileName, MultipartFile newVideoFile, String videoUploadDirectory) throws IOException {
+    // Generate a unique file name for the updated video
+    String uniqueFileName = System.currentTimeMillis() + "_" + newVideoFile.getOriginalFilename();
+
+    // Define the file paths for the existing and updated videos
+    String existingFilePath = Paths.get(videoUploadDirectory, existingFileName).toString();
+    String updatedFilePath = Paths.get(videoUploadDirectory, uniqueFileName).toString();
+    String modifiedPath = updatedFilePath.replace("video\\", "");
+    // Check if the existing file exists
+    if (Files.exists(Path.of(existingFilePath))) {
+        // Save the updated file to the specified location
+        Files.copy(newVideoFile.getInputStream(), Path.of(updatedFilePath), StandardCopyOption.REPLACE_EXISTING);
+
+        // Delete the existing file
+        Files.deleteIfExists(Path.of(existingFilePath));
+
+        // Return the path to the updated video
+        return modifiedPath;
+    } else {
+        // Handle the case where the existing file is not found
+        throw new FileNotFoundException("Existing file not found: " + existingFileName);
+    }
+}
+
 
 }
